# zalo-assistant

./: Cargo.toml
src/: main.rs
zalo-bot/: Cargo.toml
zalo-bot/src/: lib.rs  prelude.rs
zalo-bot/src/bot/: bot_builder.rs  mod.rs
zalo-bot/src/bot/actions/: get_me.rs  get_update.rs  mod.rs
zalo-bot/src/bot/constants/: endpoints.rs  mod.rs
zalo-bot/src/bot/types/: chat.rs  errors.rs  message.rs  mod.rs  update.rs  user.rs
zalo-bot/src/request/: http_request_builder.rs  mod.rs
zalo-bot/src/request/types/: errors.rs  mod.rs  request_dto.rs  response_dto.rs
