[package]
name = "zalo-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "^0.1"
clap = { version = "^4.5", features = ["derive", "env"] }
reqwest = { version = "^0.12", features = ["cookies", "gzip", "json"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
anyhow = "^1.0"
thiserror = "^2.0"
url = "^2.5"

[dev-dependencies]
tokio = { version = "^1.47", features = ["rt-multi-thread", "macros"] }
dotenvy = "^0.15"
